# RtV-Load-Order-Editor

./: .gitignore  CHANGELOG.md  README.md  RtV_LoadOrder_Editor.spec  _validate.py  analyzer.py  gui.py  paths.py  pck_reader.py  pyproject.toml  vmz_scanner.py
.github/workflows/: release.yml
assets/fonts/: OFL-Atkinson.txt
tests/: test_analyzer.py  test_config_io.py  test_pck_reader.py  test_vmz_scanner.py
