[project]
name = "rtv-load-order-editor"
version = "1.2.1"
description = "Standalone load order editor for Road to Vostok mods"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
